// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ProductTitle must show the component with the customized title 1`] = `
<span
  className="productDescription undefined"
>
  Custom Product
</span>
`;

exports[`ProductTitle must show the component with the product name 1`] = `
<div
  className="productCard undefined"
>
  <span
    className="productDescription undefined"
  >
    Custom Product
  </span>
</div>
`;
